host and projectid into secret

--- a/deployments/indie-game-server/app.yaml
+++ b/deployments/indie-game-server/app.yaml
@@ -18,6 +18,7 @@ service: indie-game-server
 instance_class: F1
 # todo secrests setting
 env_variables:
-  PROJECT_ID: boss-dungeon
+  PROJECT_ID: ${PROJECT_ID}
+  HOST: ${HOST}
 # deployment target
 main: github.com/hojin-kr/indie-game-server-architecture/cmd/indie-game-server
