--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.PROJECT_ID }}
   APP_NAME: indie-game-server
+  HOST: ${{ secrets.HOST }}
 
 jobs:
   setup-deploy:
@@ -33,4 +34,6 @@ jobs:
     - name: Deploy - stop previous version
       run: |-
         cd deployments/${{ env.APP_NAME }}
+        sed -i 's/${PROJECT_ID}/${{ env.PROJECT_ID }}/g' app.yaml
+        sed -i 's/${HOST}/${{ env.HOST }}/g' app.yaml
         gcloud app deploy --quiet
