--- a/.github/workflows/appengine.yml
+++ b/.github/workflows/appengine.yml
@@ -15,6 +15,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.PROJECT_ID }}
   APP_NAME: ${{ github.event.inputs.app_name }}
+  HOST: ${{ secrets.HOST }}
 
 jobs:
   setup-deploy:
@@ -42,6 +43,8 @@ jobs:
       if: ${{ github.event.inputs.is_stop_previous_version == 'true' }}
       run: |-
         cd deployments/${{ env.APP_NAME }}
+        sed -i 's/${PROJECT_ID}/${{ env.PROJECT_ID }}/g' app.yaml
+        sed -i 's/${HOST}/${{ env.HOST }}/g' app.yaml
         gcloud app deploy --no-stop-previous-version --quiet
 
     # Deploy - stop previous version
@@ -49,4 +52,6 @@ jobs:
       if: ${{ github.event.inputs.is_stop_previous_version == 'true' }}
       run: |-
         cd deployments/${{ env.APP_NAME }}
+        sed -i 's/${PROJECT_ID}/${{ env.PROJECT_ID }}/g' app.yaml
+        sed -i 's/${HOST}/${{ env.HOST }}/g' app.yaml
         gcloud app deploy --quiet
