--- a/.github/workflows/appengine.yml
+++ b/.github/workflows/appengine.yml
@@ -3,10 +3,6 @@ name: Deploy to AppEngine Manual
 on:
   workflow_dispatch:
     inputs:
-      app_name:
-        description: 'app name'
-        default: 'helloworld'
-        required: true
       is_stop_previous_version:
         description: '--no-stop-previous-version'
         default: 'true'
@@ -14,7 +10,6 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.PROJECT_ID }}
-  APP_NAME: ${{ github.event.inputs.app_name }}
   HOST: ${{ secrets.HOST }}
 
 jobs:
@@ -42,7 +37,7 @@ jobs:
     - name: Deploy - no stop previous version
       if: ${{ github.event.inputs.is_stop_previous_version == 'true' }}
       run: |-
-        cd deployments/${{ env.APP_NAME }}
+        cd deployments/appengine
         sed -i 's/${PROJECT_ID}/${{ env.PROJECT_ID }}/g' app.yaml
         sed -i 's/${HOST}/${{ env.HOST }}/g' app.yaml
         gcloud app deploy --no-stop-previous-version --quiet
@@ -51,7 +46,7 @@ jobs:
     - name: Deploy - stop previous version
       if: ${{ github.event.inputs.is_stop_previous_version == 'true' }}
       run: |-
-        cd deployments/${{ env.APP_NAME }}
+        cd deployments/appengine
         sed -i 's/${PROJECT_ID}/${{ env.PROJECT_ID }}/g' app.yaml
         sed -i 's/${HOST}/${{ env.HOST }}/g' app.yaml
         gcloud app deploy --quiet
