서비스 이름 롤백

--- a/deployments/appengine/app.yaml
+++ b/deployments/appengine/app.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 runtime: go115
-service: game-server
+service: indie-game-server
 
 instance_class: F1
 # todo secrests setting
