--- a/deployments/test/app.yaml
+++ b/deployments/test/app.yaml
@@ -21,4 +21,4 @@ env_variables:
   PROJECT_ID: ${PROJECT_ID}
   HOST: indie-game-server-dot-${PROJECT_ID}.du.r.appspot.com
 # deployment target
-main: github.com/hojin-kr/game-server/cmd
+main: github.com/hojin-kr/tiger/cmd
