--- a/deployments/test/cloudrun.yaml
+++ b/deployments/test/cloudrun.yaml
@@ -1,13 +1,19 @@
 apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
-  name: haru-test2
+  name: haru
 spec:
   template:
     spec:
+      containerConcurrency: 80
+      timeoutSeconds: 300
+      serviceAccountName: dreamant@boss-dungeon.iam.gserviceaccount.com
       containers:
-      - image: gcr.io/boss-dungeon/haru
+      - image: gcr.io/boss-dungeon/haru@sha256:5f7a2435b41b044aa63491204b0b12069381f3718bb91a20f40ed31ff90c321d
         ports:
         - name: h2c
           containerPort: 50051
-        
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 512Mi
