--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Deploy - stop previous version
       run: |-
         gcloud builds submit . --tag=gcr.io/${PROJECT_ID}/haru
-        gcloud run services replace deployments/test/cloudrun.yaml --region=asia-northeast3 --namespace=test
+        gcloud run services replace deployments/test/cloudrun.yaml --region=asia-northeast3
