--- a/cmd/ds/index.yaml
+++ b/cmd/ds/index.yaml
@@ -5,90 +5,63 @@ indexes:
 # gcloud datastore indexes create
 # gcloud datastore indexes describe
 # gcloud datastore indexes list
-- kind: Game
+- kind: GameList
   properties:
-  - name: Time
   - name: Created
     direction: desc
+  - name: TypePlay
 
-- kind: Game
+- kind: GameList
   properties:
   - name: Time
+  - name: TypePlay
+
+- kind: GameList
+  properties:
+  - name: Time
+    direction: desc
+  - name: TypePlay
+
+- kind: GameList
+  properties:
+  - name: Price
+  - name: TypePlay
+
+- kind: GameList
+  properties:
+  - name: Price
+    direction: desc
+  - name: TypePlay
+
+- kind: GameList
+  properties:
   - name: Created
-    direction: asc
-
-- kind: Game
-  properties:
-  - name: Time
-  - name: TypePlay
-  - name: Created
     direction: desc
-
-- kind: Game
-  properties:
-  - name: Time
   - name: TypePlay
     direction: desc
-  - name: Created
-    direction: desc
 
-- kind: Game
-  properties:
-  - name: Time
-  - name: TypePlay
-
-- kind: Game
+- kind: GameList
   properties:
   - name: Time
   - name: TypePlay
     direction: desc
 
-- kind: Game
+- kind: GameList
   properties:
   - name: Time
-  - name: TypePlay
-
-- kind: Game
-  properties:
-  - name: Time
+    direction: desc
   - name: TypePlay
     direction: desc
 
-- kind: Game
+- kind: GameList
   properties:
-  - name: Time
-  - name: TypePlay
   - name: Price
-
-- kind: Game
-  properties:
-  - name: Time
   - name: TypePlay
     direction: desc
-  - name: Price
 
-- kind: Game
+- kind: GameList
   properties:
-  - name: Time
-  - name: TypePlay
-    direction: desc
   - name: Price
     direction: desc
-
-- kind: Game
-  properties:
-  - name: Time
   - name: TypePlay
-  - name: Price
-    direction: desc
-
-- kind: Game
-  properties:
-  - name: Time
-  - name: Price
-
-- kind: Game
-  properties:
-  - name: Time
-  - name: Price
     direction: desc
