--- a/deployments/dev/cloudrun.yaml
+++ b/deployments/dev/cloudrun.yaml
@@ -11,11 +11,13 @@ spec:
       timeoutSeconds: 300
       serviceAccountName: golf-367911@appspot.gserviceaccount.com
       containers:
-      - image: gcr.io/golf-367911/haru:0.1.14
+      - image: gcr.io/golf-367911/haru:0.1.21
         ports:
         - name: h2c
           containerPort: 50051
         env:
+        - name: IS_PRODUCTION
+          value: "false"
         - name: PROJECT_ID
           value: golf-367911
         - name: APP_KEY
@@ -25,6 +27,8 @@ spec:
         - name: APPLE_BUNDLE_ID
           value : ""
         - name: APPLE_APNS_KEY_ID
+          value : ""
+        - name : APPLE_APNS_KEY
           value : ""
         resources:
           limits:
