--- a/cmd/ds/index.yaml
+++ b/cmd/ds/index.yaml
@@ -65,3 +65,20 @@ indexes:
     direction: desc
   - name: Price
     direction: desc
+
+- kind: Join
+  properties:
+  - name: AccountId
+  - name: Status
+  - name: Start
+
+- kind: Join
+  properties:
+  - name: GameId
+  - name: Status
+  - name: Created
+
+- kind: Chat
+  properties:
+  - name: GameId
+  - name: Created
